[package]
name = "haliax-thermal-functions"
version = "0.1.0"
authors = ["Logan A Morrison <loanmorr@ucsc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
cyphus-integration = { path = "../cyphus-integration" }
cyphus-interpolation = { path = "../cyphus-interpolation" }
cyphus-specfun = { path = "../cyphus-specfun" }
ndarray = "0.13.1"
