[package]
name = "haliax-thermal-functions"
version = "0.1.0"
authors = ["Logan A Morrison <loanmorr@ucsc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
cyphus-integration = { git = "https://github.com/rust-cyphus/cyphus-integration.git" }
cyphus-interpolation = { git = "https://github.com/rust-cyphus/cyphus-interpolation.git" }
cyphus-diffeq = { git = "https://github.com/rust-cyphus/cyphus-diffeq.git" }
cyphus-specfun = { git = "https://github.com/rust-cyphus/cyphus-specfun.git" }
ndarray = "0.13.1"
